--- a/parts/qeditor/gotolinedialog.ui
+++ b/parts/qeditor/gotolinedialog.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>GotoLineDialog</class>
 <widget class="QDialog">
     <property name="name">
@@ -13,7 +13,7 @@
         </rect>
     </property>
     <property name="caption">
-        <string>Goto Line</string>
+        <string>Go to Line</string>
     </property>
     <property name="sizeGripEnabled">
         <bool>true</bool>
@@ -75,6 +75,12 @@
             <property name="sizeType">
                 <enum>Expanding</enum>
             </property>
+            <property name="sizeHint">
+                <size>
+                    <width>20</width>
+                    <height>20</height>
+                </size>
+            </property>
         </spacer>
         <widget class="QLayoutWidget">
             <property name="name">
@@ -100,6 +106,12 @@
                     <property name="sizeType">
                         <enum>Expanding</enum>
                     </property>
+                    <property name="sizeHint">
+                        <size>
+                            <width>20</width>
+                            <height>20</height>
+                        </size>
+                    </property>
                 </spacer>
                 <widget class="QPushButton">
                     <property name="name">
@@ -109,7 +121,7 @@
                         <string>&amp;OK</string>
                     </property>
                     <property name="accel">
-                        <number>276824143</number>
+                        <string>Alt+O</string>
                     </property>
                     <property name="autoDefault">
                         <bool>true</bool>
@@ -126,7 +138,7 @@
                         <string>&amp;Cancel</string>
                     </property>
                     <property name="accel">
-                        <number>276824131</number>
+                        <string>Alt+C</string>
                     </property>
                     <property name="autoDefault">
                         <bool>true</bool>
