--- a/parts/trollproject/newwidgetdlgbase.ui
+++ b/parts/trollproject/newwidgetdlgbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>NewWidgetDlgBase</class>
 <widget class="QDialog">
     <property name="name">
@@ -21,7 +21,7 @@
         </sizepolicy>
     </property>
     <property name="caption">
-        <string>New widget</string>
+        <string>New Widget</string>
     </property>
     <grid>
         <property name="name">
@@ -38,7 +38,7 @@
                 <cstring>PushButton2</cstring>
             </property>
             <property name="text">
-                <string>Cancel</string>
+                <string>&amp;Cancel</string>
             </property>
         </widget>
         <widget class="QGroupBox" row="0" column="0" rowspan="1" colspan="3">
@@ -46,7 +46,7 @@
                 <cstring>GroupBox2</cstring>
             </property>
             <property name="title">
-                <string>Widget properties</string>
+                <string>Widget Properties</string>
             </property>
             <grid>
                 <property name="name">
@@ -85,7 +85,7 @@
                                 <cstring>captionLb</cstring>
                             </property>
                             <property name="text">
-                                <string>Caption</string>
+                                <string>Caption:</string>
                             </property>
                         </widget>
                         <widget class="QLineEdit" row="2" column="1">
@@ -98,7 +98,7 @@
                                 <cstring>TextLabel4</cstring>
                             </property>
                             <property name="text">
-                                <string>Subclass Name</string>
+                                <string>Subclass name:</string>
                             </property>
                         </widget>
                         <widget class="QLineEdit" row="1" column="1">
@@ -122,7 +122,7 @@
                                 <cstring>classnameLb</cstring>
                             </property>
                             <property name="text">
-                                <string>Class Name</string>
+                                <string>Class name:</string>
                             </property>
                         </widget>
                     </grid>
@@ -186,7 +186,7 @@
                 <cstring>PushButton3</cstring>
             </property>
             <property name="text">
-                <string>Ok</string>
+                <string>&amp;OK</string>
             </property>
         </widget>
     </grid>
